# Book_Recommender

./: DEPLOYMENT_QUICK_START.txt  PROJECT_FLOW.md  README.md  RENDER_DEPLOYMENT.md  app.py  deployment_check.ps1  deployment_check.sh  main.py  pyproject.toml  render.yaml  requirements.txt  template.py  test_pydantic.py  test_system.py
artifacts/: final_ratings.pkl
components/: stage_00_data_ingestion.py  stage_01_data_validation.py  stage_02_data_transformation.py  stage_03_model_trainer.py
config/: config.yaml  configuration.py
entity/: config_entity.py
exception/: exception_handler.py
logger/: log.py
notebooks/: research.ipynb
pipeline/: training_pipeline.py
templates/: index.html  recommend.html
utils/: util.py
